--- a/themes/casper/layouts/partials/navigation.html
+++ b/themes/casper/layouts/partials/navigation.html
@@ -36,10 +36,10 @@
         {{end}}
     </ul>
 
-    {{ if .Site.Params.RSSLink}}
-    <a class="subscribe-button icon-feed" href="{{.Site.Params.RSSLink }}">Subscribe</a> </div>
-    {{else}}
-    <a class="subscribe-button icon-feed" href="{{if .IsNode}}{{.RSSLink}}{{else}}{{"index.xml" | relURL}}{{end}}">Subscribe</a>
-    {{end}}
+    {{ /* if .Site.Params.RSSLink}}
+      <a class="subscribe-button icon-feed" href="{{.Site.Params.RSSLink }}">Subscribe</a> </div>
+      {{else}}
+      <a class="subscribe-button icon-feed" href="{{if .IsNode}}{{.RSSLink}}{{else}}{{"index.xml" | relURL}}{{end}}">Subscribe</a>
+    {{end */ }}
 </div>
 <span class="nav-cover"></span>
