--- a/themes/casper/static/css/screen.css
+++ b/themes/casper/static/css/screen.css
@@ -657,7 +657,7 @@ body.nav-opened .nav {
 }
 
 .nav-title {
-    position: absolute;
+    position: relative;
     top: 45px;
     left: 30px;
     font-size: 16px;
