--- a/themes/amp/layouts/_default/li.html
+++ b/themes/amp/layouts/_default/li.html
@@ -1,8 +1,8 @@
                         {{if gt (len .Summary) 0}}
-                        <div class="ampstart-card abe-sample-card flex flex-column flex-auto p1 mb1">
-                            <h3 class="mb1">{{ .Title }}<i class=""></i></h3>
+<div class="ampstart-card flex flex-column flex-auto p1 mb1">
+                            <h3 class="mb1"><a href="{{ .Permalink }}">{{ .Title }}</a><i class=""></i></h3>
                             {{if gt (len .Summary) 400}}
-                                <p class="mb1">{{slicestr .Summary 3 400 }}</p>
+                                <p class="mb1">{{slicestr .Summary 0 400 }}</p>
                             {{else}}
                                 <p class="mb1">{{ .Summary }}</p>
                             {{end}}
@@ -22,3 +22,4 @@
    <!-- <a class="ampstart-btn caps text-decoration-none inline-block" href="{{ .Permalink }}">Read More…</a> -->
                         </div>
                         {{end}}
+                        </div>
