--- a/themes/amp/layouts/partials/tag.html
+++ b/themes/amp/layouts/partials/tag.html
@@ -1,18 +1,140 @@
-   <amp-selector layout="container">
+<amp-selector layout="container">
         <main class="flex pl2">
-            <aside class="www-components-sec-nav col-3 xs-hide sm-hide relative">
+            <aside class="www-components-sec-nav col-3 relative">
 {{ if .Params.subcat }}
               <ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background:#222;color:#fff;margin:15px 15px 15px 15px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none center" option="body">{{ .Title }} methods</a></li>
 {{ range .Params.subcat }}
+
   <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">{{ . }}</a></li>
-{{ end }}
-	      </ul>
-{{else}}
-  <! if there are no subcategories listed, show tags and categories of this post as links >
+{{ end }}     </ul>
+
+
+{{else}} {{if (eq .Title "Wastewater Collection") or (eq .Title "How plunger pump works - Animation")}} 
+<ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">{{ .Title }} methods</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">no Collection</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">Nightsoil Bucket</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">Vault /Cartage</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">Septic /Tank</a></li>
+</ul>
+{{end}}
+
+{{if eq .Title "Transfer"}} 
+<ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">Wastewater & Sewerage {{ .Title }} methods</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">No Transfer</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">small bore / settled storage</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">conventional sewerage</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">drainage field</a></li>
+</ul>
+{{end}}
+
+
+{{if eq .Title "Simple Water Distribution"}} 
+<ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">{{ .Title }} methods</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">Household dibution systems</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">Distribution system connectnions</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">piped water - gravity</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">piped water - pumped</a></li>
+{{end}}
+
+ {{if eq .Title "Wastewater"}} 
+
+<ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">{{ .Title }} methods</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">No transfer</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">Small bore / settled storage</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">conventional sewerage</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">drainage field</a></li>
+{{ end }}     </ul>
+
+{{if eq .Title "Water Storage"}} 
+
+<ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">{{ .Title }} methods</a></li>
+
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">no storage water systems</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">barrel storage</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">tank storage</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">reservoir</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">cistern</a></li>
+</ul>
+{{end}}
+{{if eq .Title "Procurement"}} 
+
+<ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">{{ .Title }} methods</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">bucket</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">handpump</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">handpump - deep well</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">rope and bucket /w windlass</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">motorized pump</a></li>
+  <li class="clearfix mb3"><a href="/cat/wastewater/transfer" class="www-component-anchor text-decoration-none left" option="body">standpump</a></li>
+</ul>
+{{end}}
+{{if eq .Title "Water Sources"}} 
+<ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">{{ .Title }} methods</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Rooftop Water Harvesting</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Ground Level Catchment</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Subsurface Dam</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Surface Water Abstraction</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Sprin Water Captation</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Hand Dug Well</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Drilled Well</a></li>
+</ul>
+{{end}}
+{{if eq .Title "Water Treatment"}} 
+<ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">{{ .Title }} methods</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">no treatment water systems</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Chlorination</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Slow sand filter</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">boiling</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Ultraviolet light</a></li>
+</ul>
+{{end}}
+{{if eq .Title "Treatment"}} 
+<ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }}" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">Wastewater {{ .Title }} methods</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">No Treatment</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Constructed Wetlands</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Soil Aquifer Treatment</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Oxidation ditch</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">rotating biological contractor</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">trickling filters</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Activated Sludge Process</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">Stabilization Ponds</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">UV Sterilization</a></li>
+</ul>
+{{end}}
+
+ {{if eq .Title "Disposal"}}
+<ul class="www-component-anchors list-reset m0 p0 px1 caps">
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">{{ .Title }} methods</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">burial</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">composting</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">pit privy</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">ventilated improved pit latrine</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">aqua privy</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">pour flush toilet</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">cistern flush toilet</a></li>
+  <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">drainage field</a></li>
+</ul>
+            </aside>
+            <aside class="col-1 xs-hide"></aside>
+{{ if .Params.tag}}{{if .Params.cat }}
+            <aside class="www-components-sec-nav col-3 xs-hide sm-hide relative">
+{{end}}
+
+
               <ul class="www-component-anchors list-reset m0 p0 px1 caps">
 {{ range .Params.tag }}
   <li class="clearfix mb3"><a href="/tag/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">{{ . }}</a></li>
 {{ end }}
+
  
 {{ range .Params.cat }}
   <li class="clearfix mb3"><a href="/cat/{{ . | urlize }}" class="www-component-anchor text-decoration-none left" option="body">{{ . }}</a></li>
@@ -20,13 +142,10 @@
                 </ul>
 {{ end }}
             </aside>
+{{ end }}
+{{ end }}
+            </aside>
             <aside class="col-1 xs-hide"></aside>
-
-            <article class="www-components flex-auto col-10">
-                <section class="www-component-desc">
-                {{ .Content | replaceRE "eliteaccordion" "" | replaceRE "elitetoggle" "" | replaceRE "title=&ldquo;Generated closed captioned text&rdquo;" "" | safeHTML }}
-                </section>
-            </article>
 
    
                         {{if gt (len .Summary) 0}}
@@ -39,13 +158,17 @@
                             {{end}}
                             <div class="abe-sample-card-actions">
                             <a class="ampstart-btn ampstart-btn-secondary caps text-decoration-none inline-block" href="{{ .Permalink }}">Read More…</a></div>
-
 {{ range .Params.tag }}
   <div class="abe-sample-card-actions">
   <a class="ampstart-btn caps text-decoration-none inline-block" href="/tag/{{ . | urlize }}" option="body">{{ . }}</a></div>
 {{ end }}
+{{end}}
+{{if eq .Title "Tags"}} 
+i
+{{ range .Params.tag }}
+  <div class="abe-sample-card-actions">
+  <a class="ampstart-btn caps text-decoration-none inline-block" href="/tag/{{ . | urlize }}" option="body">{{ . }}</a></div>
+{{ end }}
+{{ end }}
             <aside class="col-1 xs-hide">
             </aside>
-        </main>
-    </amp-selector>
-{{end}}
