--- a/themes/amp/layouts/partials/footer.html
+++ b/themes/amp/layouts/partials/footer.html
@@ -54,7 +54,8 @@
             </ul>
         </nav>
  --> 
-        <small>{{ .Site.Title | safeHTML }} powered by <a href="http://gohugo.io" target="_blank">hugo</a> theme <a href="https://github.com/pdevty/amp" target="_blank">amp</a> designed by <a href="http://pdevty.github.io" target="_blank">pdevty</a></small>
+        <small>SCD Hub mission is to serve as a hub for sustainable community development in order to provide trustworthy development & training tools to facilitate project planning, design & execution<BR>Powered by <a href="http://gohugo.io" target="_blank">Hugo</a> theme <a href="https://github.com/pdevty/amp" target="_blank">amp</a> by <a href="http://pdevty.github.io" target="_blank">pdevty</a>, <a href="https://github.com/SustainableCommunityDevelopmentHub/hugo_site/">SCD Hub site</a>, built in house. CI/CD server via <a href="https://netlify.com">Netlify</a></small>
+ </div>
     </footer>
     <!-- End Footer -->
     {{if ne .Site.Params.googleanalytics nil}}
