--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -17,6 +17,28 @@
                 </ul>
             </aside>
 -->
+            
+            {{< flex >}}
+
+{{< flex-column >}}
+
+  <center>
+    <p>SCD Hub social venture case studies</p>
+  </center>
+
+{{< /flex-column >}}
+
+{{< flex-column >}}
+
+  <center>
+    <p>DIY & repair tequniques</p>
+  </center>
+
+{{< /flex-column >}}
+
+{{< /flex >}}
+            
+            
             <article class="www-components flex-auto col-8">
                 <section class="www-component-desc" id="samples_templates">
 <!--
