--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -18,25 +18,20 @@
             </aside>
 -->
             
-            {{< flex >}}
-
-{{< flex-column >}}
+       
+ <aside class="flex-column">
 
   <center>
     <p>SCD Hub social venture case studies</p>
   </center>
 
-{{< /flex-column >}}
-
-{{< flex-column >}}
+ </aside>
+ <aside class="flex-column">
 
   <center>
     <p>DIY & repair tequniques</p>
   </center>
-
-{{< /flex-column >}}
-
-{{< /flex >}}
+ </aside>
             
             
             <article class="www-components flex-auto col-8">
