--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -19,6 +19,7 @@
 -->
             
        
+            <div class="row">
  <aside class="flex-column">
 
   <center>
@@ -32,7 +33,7 @@
     <p>DIY & repair tequniques</p>
   </center>
  </aside>
-            
+            </div>           
             
             <article class="www-components flex-auto col-8">
                 <section class="www-component-desc" id="samples_templates">
