--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -19,7 +19,10 @@
 -->
             
        
-            <div class="row">
+ <div style="  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;">
  <aside class="flex-column">
 
   <center>
@@ -33,7 +36,7 @@
     <p>DIY & repair tequniques</p>
   </center>
  </aside>
-            </div>           
+ </div>           
             
             <article class="www-components flex-auto col-8">
                 <section class="www-component-desc" id="samples_templates">
