--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -7,6 +7,27 @@
         </header>
     <amp-selector layout="container">
         <main class="flex pl2">
+
+    <form id="myform"
+    method="post"
+    action-xhr="https://example.com/myform"    target="_blank">
+    <fieldset>
+      <label>
+        <input name="answer1"
+          value="Value 1"
+          type="radio"
+          on="change:myform.submit">Value 1
+      </label>
+      <label>
+        <input name="answer1"
+          value="Value 2"
+          type="radio"
+          on="change:myform.submit">Value 2
+      </label>
+    </fieldset>
+  </form>
+
+
 <!--
             <aside class="www-components-sec-nav col-2 xs-hide sm-hide relative">
                 <ul class="www-component-anchors list-reset m0 pt0 pb3 px1 caps">
