--- a/themes/amp/layouts/partials/subcat/wastewater-collection.html
+++ b/themes/amp/layouts/partials/subcat/wastewater-collection.html
@@ -1,5 +1,5 @@
 <ul class="www-component-anchors list-reset m0 p0 px1 caps">
-  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">Wastewater and Septage collection methods</a></li>
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/{{ .Title }} methods" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">Wastewater and Sewage Collection Methods</a></li>
   <li class="clearfix mb3"><a href="/cat/no-collection" class="www-component-anchor text-decoration-none left" option="body">no Collection</a></li>
   <li class="clearfix mb3"><a href="/cat/nightsoil-bucket" class="www-component-anchor text-decoration-none left" option="body">Nightsoil Bucket</a></li>
   <li class="clearfix mb3"><a href="/cat/vault-cartage" class="www-component-anchor text-decoration-none left" option="body">Vault /Cartage</a></li>
