--- a/themes/amp/layouts/partials/tag.html
+++ b/themes/amp/layouts/partials/tag.html
@@ -87,29 +87,29 @@
  {{if eq .Title "Drainage Field"}}{{ partial "subcat/disposal.html"}}{{end}}
 
 
- {{if eq .Title "No Storage"}}{{ partial "subcat/msw-storage.html"}}{{end}}
- {{if eq .Title "Household Bin"}}{{ partial "subcat/msw-storage.html"}}{{end}}
- {{if eq .Title "Communal Bin"}}{{ partial "subcat/msw-storage.html"}}{{end}}
+ {{if eq .Title "No Storage"}}{{ partial "subcat/municipal-waste-storage.html"}}{{end}}
+ {{if eq .Title "Household Bin"}}{{ partial "subcat/municipal-waste-storage.html"}}{{end}}
+ {{if eq .Title "Communal Bin"}}{{ partial "subcat/municipal-waste-storage.html"}}{{end}}
 
- {{if eq .Title "No Transfer"}}{{ partial "subcat/msw-transfer.html"}}{{end}}
- {{if eq .Title "Human Power"}}{{ partial "subcat/msw-transfer.html"}}{{end}}
- {{if eq .Title "Animal Power"}}{{ partial "subcat/msw-transfer.html"}}{{end}}
- {{if eq .Title "Non-compactor Trucks"}}{{ partial "subcat/msw-transfer.html"}}{{end}}
- {{if eq .Title "Compactor Trucks"}}{{ partial "subcat/msw-transfer.html"}}{{end}}
+ {{if eq .Title "No Transfer"}}{{ partial "subcat/municipal-waste-transfer.html"}}{{end}}
+ {{if eq .Title "Human Power"}}{{ partial "subcat/municipal-waste-transfer.html"}}{{end}}
+ {{if eq .Title "Animal Power"}}{{ partial "subcat/municipal-waste-transfer.html"}}{{end}}
+ {{if eq .Title "Non-compactor Trucks"}}{{ partial "subcat/municipal-waste-transfer.html"}}{{end}}
+ {{if eq .Title "Compactor Trucks"}}{{ partial "subcat/municipal-waste-transfer.html"}}{{end}}
 
- {{if eq .Title "No Disposal"}}{{ partial "subcat/msw-disposal.html"}}{{end}}
- {{if eq .Title "Waste Discarded at Source"}}{{ partial "subcat/msw-disposal.html"}}{{end}}
- {{if eq .Title "Open Burning"}}{{ partial "subcat/msw-disposal.html"}}{{end}}
- {{if eq .Title "Open Dumps"}}{{ partial "subcat/msw-disposal.html"}}{{end}}
- {{if eq .Title "Controlled Dumps"}}{{ partial "subcat/msw-disposal.html"}}{{end}}
- {{if eq .Title "Sanitary Landfilling"}}{{ partial "subcat/msw-disposal.html"}}{{end}}
- {{if eq .Title "Incineration"}}{{ partial "subcat/msw-disposal.html"}}{{end}}
+ {{if eq .Title "No Disposal"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
+ {{if eq .Title "Waste Discarded at Source"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
+ {{if eq .Title "Open Burning"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
+ {{if eq .Title "Open Dumps"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
+ {{if eq .Title "Controlled Dumps"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
+ {{if eq .Title "Sanitary Landfilling"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
+ {{if eq .Title "Incineration"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
 
- {{if eq .Title "No Recovery"}}{{ partial "subcat/msw-recovery.html"}}{{end}}
- {{if eq .Title "Composting"}}{{ partial "subcat/msw-recovery.html"}}{{end}}
- {{if eq .Title "Refuse Derived Fuel"}}{{ partial "subcat/msw-recovery.html"}}{{end}}
- {{if eq .Title "Pyrolysis"}}{{ partial "subcat/msw-recovery.html"}}{{end}}
- {{if eq .Title "Recycling/ Reuse"}}{{ partial "subcat/msw-recovery.html"}}{{end}}
+ {{if eq .Title "No Recovery"}}{{ partial "subcat/municipal-waste-recovery.html"}}{{end}}
+ {{if eq .Title "Composting"}}{{ partial "subcat/municipal-waste-recovery.html"}}{{end}}
+ {{if eq .Title "Refuse Derived Fuel"}}{{ partial "subcat/municipal-waste-recovery.html"}}{{end}}
+ {{if eq .Title "Pyrolysis"}}{{ partial "subcat/municipal-waste-recovery.html"}}{{end}}
+ {{if eq .Title "Recycling/ Reuse"}}{{ partial "subcat/municipal-waste-recovery.html"}}{{end}}
             </aside>
             <aside class="col-1 xs-hide"></aside>
 {{ if .Params.tag}}{{if .Params.cat }}
