--- a/themes/amp/layouts/partials/tag.html
+++ b/themes/amp/layouts/partials/tag.html
@@ -31,10 +31,13 @@
 
 {{if eq .Title "Wastewater"}}{{partial "subcat/wastewater.html"}}{{end}} 
 
+{{if eq .Title "water storage"}}{{partial "subcat/water-storage.html"}}{{end}}
 {{if eq .Title "Water Storage"}}{{partial "subcat/water-storage.html"}}{{end}}
 {{if eq .Title "No Storage Water Systems"}}{{partial "subcat/water-storage.html"}}{{end}}
 {{if eq .Title "Barrel Storage"}}{{partial "subcat/water-storage.html"}}{{end}}
+{{if eq .Title "barrel storage"}}{{partial "subcat/water-storage.html"}}{{end}}
 {{if eq .Title "Tank Storage"}}{{partial "subcat/water-storage.html"}}{{end}}
+{{if eq .Title "tank storage"}}{{partial "subcat/water-storage.html"}}{{end}}
 {{if eq .Title "Reservoir"}}{{partial "subcat/water-storage.html"}}{{end}}
 {{if eq .Title "Cistern"}}{{partial "subcat/water-storage.html"}}{{end}}
 
